mlflow_api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: models-api-deployment
  namespace: cjarcau
spec:
  replicas: 1
  selector:
    matchLabels:
      app: models
  template:
    metadata:
      labels:
        app: models
    spec:
      containers:
      - name: models
        image: scr4pp/models-api
        ports:
        - containerPort: 8000
        imagePullPolicy: IfNotPresent
