mlflow_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: models-api-service
  namespace: cjarcau
spec:
  selector:
    app: models
  ports:
    - protocol: TCP
      port: 49154
      targetPort: 8000
  type: ClusterIP
